--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "zero-react",
   "version": "1.0.0",
-  "description": "",
+  "description": "react-ts 后台管理系统项目模版内置菜单路由、状态管理多环境打包等工具开箱即用",
   "main": "index.js",
+  "keywords": [
+    "react",
+    "admin",
+    "typescript"
+  ],
+  "author": "qianshilei",
+  "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve -c scripts/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack -c scripts/webpack.prod.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 10"
   ],
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
@@ -43,6 +43,11 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0"
+    "webpack-merge": "^5.9.0",
+    "webpackbar": "^5.0.2"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
