--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve -c scripts/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack -c scripts/webpack.prod.js"
+    "dev:jingzhou": "cross-env NODE_ENV=development MAP_ENV=jingzhou webpack serve -c scripts/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack -c scripts/webpack.prod.js",
+    "build:jingzhou": "cross-env NODE_ENV=production MAP_ENV=jingzhou webpack -c scripts/webpack.prod.js"
   },
   "browserslist": [
     "> 1%",
@@ -24,6 +26,7 @@
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
+    "@types/node": "^20.7.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
@@ -48,7 +51,13 @@
     "webpackbar": "^5.0.2"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "antd": "^5.9.2",
+    "axios": "^1.5.0",
+    "dayjs": "^1.11.9",
+    "history": "^5.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   }
 }
